<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.trackmysleepquality.addFood.AddFoodViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_name_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_food_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_quantity_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_food_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_calories_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/button_add_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />

    </LinearLayout>
</layout>
