<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.trackmysleepquality.foodDB.FoodDatabaseViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/test_foods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_food_database"
            android:textSize="24sp"
            android:layout_margin="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintBottom_toTopOf="@+id/test_foods"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_food"
            android:id="@+id/food_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" >

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_to_diary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_to_diary"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/btn_add_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add_food"
                android:layout_margin="16dp"/>
        </LinearLayout>

    </LinearLayout>
</layout>
